--- a/example/samples/chart-options.html
+++ b/example/samples/chart-options.html
@@ -46,7 +46,7 @@
             <c3-chart
                 id="example-2"
                 :rows="rows"
-                transition-duration="1500">
+                :transition-duration="1500">
                     <c3-line prop="data1" name="Data 1"></c3-line>
                     <c3-line prop="data2" name="Data 2"></c3-line>
             </c3-chart>
