--- a/example/samples/point.html
+++ b/example/samples/point.html
@@ -6,16 +6,19 @@
 </head>
 <body>
     <div id="app">
-        <h1>Grid</h1>
+        <h1>Point</h1>
         <p>
             <a href="../index.html">Back to all examples</a>
         </p>
         <div>
-            <h3>Grid lines</h3>
-            <c3-chart id="show-grid"
+            <h3>Point</h3>
+            <c3-chart id="size"
                 :rows="rows"
-                :show-grid-x="true"
-                :show-grid-y="true">
+                :show-point="true"
+                  :point-radius="5"
+                  :point-focus-expand-enabled="true"
+                  :point-focus-expand-radius="10"
+                  :point-focus-select-radius="8">
                     <c3-line prop="data1" name="Data 1" custom-class="extra-class"></c3-line>
                     <c3-spline prop="data2" name="Data 2"></c3-spline>
             </c3-chart>
