--- a/example/samples/grid.html
+++ b/example/samples/grid.html
@@ -12,13 +12,11 @@
         </p>
         <div>
             <h3>Grid lines</h3>
-            <c3-chart id="show-grid"
+            <c3-line-chart id="show-grid"
                 :rows="rows"
                 :show-grid-x="true"
                 :show-grid-y="true">
-                    <c3-line prop="data1" name="Data 1" custom-class="extra-class"></c3-line>
-                    <c3-spline prop="data2" name="Data 2"></c3-spline>
-            </c3-chart>
+            </c3-line-chart>
         </div>
     </div>
     <script src="./../build/build.js"></script>
