--- a/example/index.html
+++ b/example/index.html
@@ -1,154 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>vue-c3js</title>
+  <meta charset="UTF-8">
+  <title>vue-c3js</title>
 </head>
 <body>
-    <div id="app">
-        <h1>vue-c3js</h1>
-        <p>{{ message }}</p>
-        <div>
-            <ul>
-                <li><a href="samples/chart-options.html">Chart options</a></li>
-                <li><a href="samples/grid.html">Grid</a></li>
-                <li><a href="samples/legend.html">Legend</a></li>
-                <li><a href="samples/tooltip.html">Tooltip</a></li>
-                <li><a href="samples/interaction.html">interaction</a></li>
-                <li><a href="samples/axis.html">axis</a></li>
-                <li><a href="samples/point.html">point</a></li>
-            </ul>
-        </div>
-        <div>
-            <!--c3-combination-chart id="charty"
-                  border
-                    :rows="rows"
-                    type="bar"
-                    :labels="false">
-                <c3-bar prop="data1" name="Data 1" custom-class="classyy"></c3-bar>
-                <c3-area-spline prop="data2" name="Data 2" :groups="'group1'"></c3-area-spline>
-                <c3-area-spline prop="data3" name="Data 3" :groups="'group1'"></c3-area-spline>
-            </c3-combination-chart-->
-
-            <c3-bar-chart
-                id="line-chart"
-                :rows="rows"
-                :regions="regions"
-                enable-selection
-                >
-                <!--
-                padding-right="150"
-                padding-left="150"
-                :color-pattern="['#1f77b4', '#aec7e8']"
-                disable-interaction
-                transition-duration="1500"
-
-                axis-x-tick-fit
-                axis-x-tick-centered
-                axis-x-tick-inner
-                axis-x-tick-count="5"
-                @axisXTickFormat="axisXTickFormatted"
-                :axis-x-tick-formatted="axisXTickValue"
-
-                labels
-                :order="'asc'"
-                :groups="[['data1', 'data2']]"
-                :classes="{
-                  data1: 'additional-data1-class',
-                  data2: 'additional-data2-class'
-                }"
-                :axes="{
-                  data1: 'y',
-                  data2: 'y2'
-                }"
-                :names="{
-                  data1: 'Data Name 1',
-                  data2: 'Data Name 2'
-                }"
-                :colors="{
-                  data1: '#ff0000',
-                }"
-                :data-x="rows[0][1]"
-                :data-x-format="'%Y-%m-%d %H:%M:%S'"
-
-                enable-selection
-                selection-grouped
-                single-selection
-                selection-draggable
-                empty-label-text="No data"
-
-                axis-rotated
-                hide-x-axis
-                hide-y-axis
-                :axis-x-type="'category'"
-                :axis-x-categories="['cat1', 'cat2', 'cat3', 'cat4', 'cat5', 'cat6', 'cat7', 'cat8', 'cat9']"
-
-                show-grid-x
-                show-grid-y
-                :x-grids="xGridLines"
-                :y-grids="yGridLines"
-
-                hide-legend
-                legend-position="right"
-
-                hide-tooltip
-                ungroup-tooltip
-
-                show-subchart
-                :subchart-height="50"
-
-                zoom-enabled
-                zoom-rescale
-
-                hide-point
-                point-radius="5"
-                disable-point-focus-expand
-                point-focus-expand-radius="10"
-                point-focus-expand-radius="10"
-
-                connect-null
-
-                bar-width="40"
-                bar-width-ratio="0.1"
-                not-zero-based
-
-                -->
-
-            </c3-bar-chart>
-
-            <c3-gauge-chart id="gauge"
-              :columns="gaugeColumns"
-              hide-label>
-            </c3-gauge-chart>
-
-            <c3-pie-chart id="pie"
-              :columns="pieColumns"
-              hide-label
-              disable-expand>
-            </c3-pie-chart>
-
-            <c3-donut-chart id="donut"
-              :columns="pieColumns"
-              hide-label
-              disable-expand>
-            </c3-donut-chart>
-
-            <!--
-                <c3-bar prop="data4" name="Data 4" :groups="'group2'"></c3-bar>
-                <c3-bar prop="data5" name="Data 5" :groups="'group2'"></c3-bar>
-                <c3-bar prop="data6" name="Data 6"></c3-bar>
-                      @oninit="chartInit"
-                      @onrendered="chartInit"
-                      @onmouseover="chartInit"
-                      @onmouseout="chartInit"
-                      @onresize="chartInit"
-                      @onresized="chartInit"
-                      @data-onclick="dataCallbackTest"
-                      @data-onmouseover="dataCallbackTest"
-                      @data-onmouseout="dataCallbackTest"
-            -->
-        </div>
+  <div id="app">
+    <h1>vue-c3js</h1>
+    <p>{{ message }}</p>
+    <div>
+      <ul>
+        <li><a href="samples/chart-options.html">Chart options</a></li>
+        <li><a href="samples/grid.html">Grid</a></li>
+        <li><a href="samples/legend.html">Legend</a></li>
+        <li><a href="samples/tooltip.html">Tooltip</a></li>
+        <li><a href="samples/interaction.html">interaction</a></li>
+        <li><a href="samples/axis.html">axis</a></li>
+        <li><a href="samples/point.html">point</a></li>
+      </ul>
     </div>
-    <script src="./build/build.js"></script>
+    <div>
+      <c3-bar-chart
+        bindto="test-line-chart"
+        :columns="columns"
+      ></c3-bar-chart>
+
+      <!--
+        width="400"
+        height="200"
+        padding-top="20"
+        padding-right="20"
+        padding-bottom="20"
+        padding-left="20"
+        :color-pattern="['#1f77b4', '#aec7e8']"
+        transition-duration="2000"
+
+        axis-rotated
+        hide-x-axis
+        axis-x-height="150"
+
+        show-grid-x
+        show-grid-y
+        :x-grids="xGridLines"
+        :y-grids="yGridLines"
+
+        :regions="regions"
+
+        hide-tooltip
+        ungroup-tooltip
+        :tooltip-position="function (data, width, height, element) {
+          return {top: width + 50, left: height + 60};
+        }"
+        :tooltip-position="tooltipPosition"
+
+        hide-legend
+        legend-position="right"
+        legend-position="inset"
+        legend-inset="legendInset"
+        :legend-inset="{
+          anchor: 'top-right',
+          x: 20,
+          y: 10,
+          step: undefined
+        }"
+
+        show-subchart
+        subchart-height="100"
+
+        zoom-enabled
+        zoom-rescale
+      -->
+
+      <!--c3-combination-chart id="charty"
+          border
+          :rows="rows"
+          type="bar"
+          :labels="false">
+        <c3-bar prop="data1" name="Data 1" custom-class="classyy"></c3-bar>
+        <c3-area-spline prop="data2" name="Data 2" :groups="'group1'"></c3-area-spline>
+        <c3-area-spline prop="data3" name="Data 3" :groups="'group1'"></c3-area-spline>
+      </c3-combination-chart-->
+
+      <c3-bar-chart
+        bindto="line-chart"
+        :rows="rows"
+
+        >
+        <!--
+        :regions="regions"
+        enable-selection
+        disable-brighten
+        :color-pattern="['#1f77b4', '#aec7e8']"
+        transition-duration="1500"
+        disable-interaction
+
+        axis-x-tick-fit
+        axis-x-tick-centered
+        axis-x-tick-inner
+        axis-x-tick-count="5"
+        @axisXTickFormat="axisXTickFormatted"
+        :axis-x-tick-formatted="axisXTickValue"
+
+        labels
+        :order="'asc'"
+        :groups="[['data1', 'data2']]"
+        :classes="{
+          data1: 'additional-data1-class',
+          data2: 'additional-data2-class'
+        }"
+        :axes="{
+          data1: 'y',
+          data2: 'y2'
+        }"
+        :names="{
+          data1: 'Data Name 1',
+          data2: 'Data Name 2'
+        }"
+        :colors="{
+          data1: '#ff0000',
+        }"
+        :data-x="rows[0][1]"
+        :data-x-format="'%Y-%m-%d %H:%M:%S'"
+
+        enable-selection
+        selection-grouped
+        single-selection
+        selection-draggable
+        empty-label-text="No data"
+
+        axis-rotated
+        hide-x-axis
+        hide-y-axis
+        :axis-x-type="'category'"
+        :axis-x-categories="['cat1', 'cat2', 'cat3', 'cat4', 'cat5', 'cat6', 'cat7', 'cat8', 'cat9']"
+
+        show-grid-x
+        show-grid-y
+        :x-grids="xGridLines"
+        :y-grids="yGridLines"
+
+        hide-legend
+        legend-position="right"
+
+        hide-tooltip
+        ungroup-tooltip
+
+        show-subchart
+        :subchart-height="50"
+
+        zoom-enabled
+        zoom-rescale
+
+        hide-point
+        point-radius="5"
+        disable-point-focus-expand
+        point-focus-expand-radius="10"
+        point-focus-expand-radius="10"
+
+        connect-null
+
+        bar-width="40"
+        bar-width-ratio="0.1"
+        not-zero-based
+
+        -->
+
+      </c3-bar-chart>
+
+<!--             <c3-gauge-chart id="gauge"
+        :columns="gaugeColumns"
+        hide-label>
+      </c3-gauge-chart>
+
+      <c3-pie-chart id="pie"
+        :columns="pieColumns"
+        hide-label
+        disable-expand>
+      </c3-pie-chart>
+
+      <c3-donut-chart id="donut"
+        :columns="pieColumns"
+        hide-label
+        disable-expand>
+      </c3-donut-chart> -->
+
+      <!--
+        <c3-bar prop="data4" name="Data 4" :groups="'group2'"></c3-bar>
+        <c3-bar prop="data5" name="Data 5" :groups="'group2'"></c3-bar>
+        <c3-bar prop="data6" name="Data 6"></c3-bar>
+            @oninit="chartInit"
+            @onrendered="chartInit"
+            @onmouseover="chartInit"
+            @onmouseout="chartInit"
+            @onresize="chartInit"
+            @onresized="chartInit"
+            @data-onclick="dataCallbackTest"
+            @data-onmouseover="dataCallbackTest"
+            @data-onmouseout="dataCallbackTest"
+      -->
+    </div>
+  </div>
+  <script src="./build/build.js"></script>
 </body>
 </html>
